Update example.env with DB placeholders
Replace project-specific DB_NAME with a generic placeholder and keep DB_USER/DB_PASSWORD as placeholders. Add an optional DATABASE_URL comment (example for Supabase) to allow using a full connection string. Minor cleanup: remove an extra trailing blank line.

--- a/example.env
+++ b/example.env
@@ -9,9 +9,11 @@ PORT=5050
 # ============================================
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=swagger_express_node_postgres_aws
+DB_NAME=your_database_name
 DB_USER=your_database_user
 DB_PASSWORD=your_database_password
+# Optional: full connection URL (e.g. for Supabase)
+# DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@your-project.supabase.co:5432/postgres
 
 # ============================================
 # JWT Configuration
@@ -43,4 +45,3 @@ SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 # For production, specify your frontend URL(s)
 # Example: http://localhost:3000,https://yourdomain.com
 CORS_ORIGIN=*
-
